<resources>
    <string name="app_name">GTTC NIRScan 近红外光谱扫描</string>
    <string name="action_info">Info</string>
    <string name="action_settings">设置</string>
    <string name="action_scan">Scan</string>
    <string name="action_add">Add</string>
    <string name="action_save">保存</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_info">关于我们</string>
    <string name="title_activity_settings">设置</string>
    <string-array name="info_title_array">
        <item>广检集团官方网站</item>
        <item>联系我们</item>
    </string-array>
    <string-array name="info_body_array">
        <item>广检集团是广州市主营业务为检验检测认证的市管国有企业，由市国资委履行出资人职责，委托市市场监管局监管，于2016年9月20日挂牌成立!</item>
        <item>总部地址：国家检验检测高技术服务业集聚区番禺园区（广州市番禺区石楼珠江路1号）</item>
    </string-array>
    <string-array name="info_url_array">
        <item>http://www.ti.com/tool/dlpnirnanoevm</item>
        <item>http://e2e.ti.com/support/dlp__mems_micro-electro-mechanical_systems/f/983</item>
    </string-array>
    <string name="temperature">温度</string>
    <string name="lamptime">光源使用总时长</string>
    <string name="spatial_freq">Spatial Freq</string>
    <string name="set_nano">设置我的设备</string>
    <string name="clear_nano">清空我的设备</string>
    <string name="go">Go!</string>
    <string name="forget">清空</string>
    <string name="device_filter">设备名称筛选</string>
    <string name="fiber_management">管理成分种类</string>
    <string name="administratorMode">启用管理员模式</string>
    <string name="api_url">设置API接口地址</string>
    <string name="api_key">设置API密钥</string>
    <string name="packed_file">导出光谱数据</string>
    <string name="title_activity_graph">Graph</string>
    <string name="reflectance">反射率</string>
    <string name="intensity">原始数据</string>
    <string name="absorbance">吸光度</string>
    <string name="reference_tab">参比</string>
    <string-array name="graph_tab_index">
        <item>反射率</item>
        <item>吸光度</item>
        <item>原始数据</item>
        <item>参比</item>
    </string-array>
    <string name="aspirin">aspirin</string>
    <string name="bc">bc</string>
    <string name="bellpepper">bellpepper</string>
    <string name="coconutoil">coconutoil</string>
    <string name="coffee">coffee</string>
    <string name="corn_starch">corn_starch</string>
    <string name="eucerin_lotion">eucerin_lotion</string>
    <string name="flour">flour</string>
    <string name="glucose">glucose</string>
    <string name="out_of_spec_aspirin">out_of_spec_aspirin</string>
    <string name="delete">Delete</string>
    <string name="ok">好的</string>
    <string name="not_connected_title">未连接</string>
    <string name="not_connected_message">确保安卓设备和近红外光谱仪上的蓝牙已启动，然后点击主视图上的扫描按钮。</string>
    <string name="yes_i_know">Yes, I known</string>
    <string name="battery">电池</string>
    <string name="humidity">湿度</string>
    <string name="device_status">设备状态</string>
    <string name="error_status">Error Status</string>
    <string name="temp_threshold">Temperature Threshold</string>
    <string name="deg_c">deg C</string>
    <string name="deg_f">deg F</string>
    <string name="humid_threshold">Humidity Threshold</string>
    <string name="relative_humid">% RH</string>
    <string name="not_supported">Not Supported</string>
    <string name="click">Click</string>
    <string name="clear_error">Clear Error</string>
    <string-array name="detail_device_status">
        <item>Tiva</item>
        <item>Scanning</item>
        <item>BLE stack</item>
        <item>BLE connection</item>
        <item>Scan Data Interpreting</item>
        <item>Scan Button Pressed</item>
        <item>Battery in charge</item>
    </string-array>
    <string name="detail_error_status">Detailed Error Status</string>
    <string name="detail_scan_error_status">Detailed Scan Error Status</string>
    <string name="detail_adc_error_status">Detailed ADC Error Status</string>
    <string name="detail_hw_error_status">Detailed Hardware Error Status</string>
    <string name="detail_tmp006_error_status">Detailed TMP006 Error Status</string>
    <string name="detail_hdc1000_error_status">Detailed HDC1000 Error Status</string>
    <string name="detail_battery_error_status">Detailed Battery Error Status</string>
    <string name="detail_system_error_status">Detailed System Error Status</string>
    <string name="version">v%1$s (%2$d)</string>
    <string-array name="configure_options">
        <item>Device Information</item>
        <item>Device Status</item>
        <item>Scan Configurations</item>
    </string-array>
    <string name="range_start_value">%1$d nm</string>
    <string name="range_end_value">%1$d nm</string>
    <string name="width_value">%1$d nm</string>
    <string name="patterns_value">%1$d</string>
    <string name="repeats_value">%1$d</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="scan_Type">Scan Type</string>
    <string name="range_start">Spectral Range Start</string>
    <string name="range_end">Spectral Range End</string>
    <string name="width">Width</string>
    <string name="number_patterns">Number of Patterns</string>
    <string name="number_repeats">Number of Repeats</string>
    <string name="serial_sn">Nano SN</string>
    <string name="scan">开始扫描</string>
    <string name="scan_predict">扫描并预测</string>
    <string name="prefix">文件名前缀</string>
    <string name="file_number">文件名编号</string>
    <string name="simple_number">单号</string>
    <string name="data">Data</string>
    <string name="nano">Nano</string>
    <string name="save_to_sd">Save to SD Card?</string>
    <string name="save_to_android">Save to Android Device?</string>
    <string name="cont_scan">连续测量?</string>
    <string name="scan_conf">扫描配置</string>
    <string name="col_1">Column 1</string>
    <string name="hadamard">Hadamard</string>
    <string name="cont_scan_stop">停止连续扫描</string>
    <string name="double_side_scan">启用双面扫描？</string>
    <string name="user_name">检验员</string>
    <string name="verification_data">校验双面差异？</string>
    <string name="withdraw_data">撤回当前扫描</string>
    <string name="model">Model Number</string>
    <string name="serial">Serial Number</string>
    <string name="hw_rev">Hardware Rev</string>
    <string name="tiva_rev">Tiva Rev</string>
    <string name="spectrum_rev">Spectrum Rev</string>
    <string name="batt_level_value">%1$d%%</string>
    <string name="temp_value_c">%1$s&#x2103;</string>
    <string name="temp_value_f">%1$s&#x2109;</string>
    <string name="humid_value">%1$s%% RH</string>
    <string name="stored_configurations">Stored Configurations</string>
    <string name="reading_configurations">读取扫描配置信息…</string>
    <string name="stored_scan_data">Stored Scan Data</string>
    <string name="reading_sd_card">Reading SD Card…</string>
    <string name="adding_configurations">Adding Configurations</string>
    <string name="scan_configurations">Scan Configurations</string>
    <string name="time_format_at">\'at\'</string>
    <string name="new_scan">新的扫描</string>
    <string name="newScan">NewScan</string>
    <string name="nano_disconnected">"设备已断开连接!"</string>
    <string name="configure">设置</string>
    <string name="device_information">设备信息</string>
    <string name="file_not_found">Could not find the file!</string>
    <string name="emailing">"Emailing "</string>
    <string name="send_mail">"Send mail…"</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="update_thresholds">Update Thresholds</string>
    <string name="scanning">扫描中…</string>
    <string name="dl_ref_cal">正在下载参考校准数据…</string>
    <string name="dl_cal_matrix">正在下载校准矩阵…</string>
    <string name="select_nano">选择设备</string>
    <string name="nano_confirmation_title">请确认</string>
    <string name="nano_confirmation_msg">您确定要将MAC地址为: %1$s, 的光谱仪设置为主设备吗？</string>
    <string name="nano_forget_msg">您确定要将MAC地址为: %1$s, 的光谱仪删除吗？</string>
    <string name="cancel">取消</string>
    <string name="no_sd_scans">No Stored Scans on SD Card!</string>
    <string name="desc_icon">App icon</string>
    <string name="desc_splash">TI, DLP, and ISC logo</string>
    <string name="desc_info">Info icon</string>
    <string name="lamp_time">光源稳定时间Lamp-Stable Time(ms)</string>
    <string name="scan_mode">手动扫描模式</string>
    <string name="lamp">打开光源Turn-On Lamp</string>
    <string name="pga">设置扫描增益Set Scan PGA</string>
    <string name="repeat">连续扫描次数</string>
    <string name="scan_method">扫描方法</string>
    <string name="spec_start">起始波长 (nm)</string>
    <string name="spec_end">结束波长 (nm)</string>
    <string-array name="scan_width">
        <item>2.34</item>
        <item>3.51</item>
        <item>4.68</item>
        <item>5.85</item>
        <item>7.02</item>
        <item>8.19</item>
        <item>9.36</item>
        <item>10.53</item>
        <item>11.70</item>
        <item>12.87</item>
        <item>14.04</item>
        <item>15.21</item>
        <item>16.38</item>
        <item>17.55</item>
        <item>18.72</item>
        <item>19.89</item>
        <item>21.06</item>
        <item>22.23</item>
        <item>23.40</item>
        <item>24.57</item>
        <item>25.74</item>
        <item>26.91</item>
        <item>28.08</item>
        <item>29.25</item>
        <item>30.42</item>
        <item>31.59</item>
        <item>32.76</item>
        <item>33.93</item>
        <item>35.10</item>
        <item>36.27</item>
        <item>37.44</item>
        <item>38.61</item>
        <item>39.78</item>
        <item>40.95</item>
        <item>42.12</item>
        <item>43.29</item>
        <item>44.46</item>
        <item>45.63</item>
        <item>46.80</item>
        <item>47.97</item>
        <item>49.14</item>
        <item>50.31</item>
        <item>51.48</item>
        <item>52.65</item>
        <item>53.82</item>
        <item>54.99</item>
        <item>56.16</item>
        <item>57.33</item>
        <item>58.50</item>
        <item>59.67</item>
        <item>60.84</item>
    </string-array>
    <string name="res">分辨率D-Res.</string>
    <string name="aver_scan">平均扫描次数 (times)</string>
    <string name="ex_time">曝光时间 (ms)</string>
    <string name="continuous_scan_mode">Continuous Scan Mode</string>
    <string name="scan_interval_time">连续测量时间间隔 (sec)</string>
    <string name="set_value">设置所有配置</string>
    <string name="section">Section</string>
    <string name="config_index">Config Index</string>
    <string name="serial_num">Config SerialNumber</string>
    <string name="name">Config Name</string>
    <string name="scan_repeat">扫描重复次数</string>
    <string name="total_sections">Total Scan Sections</string>
    <string name="type">Type(0:Column,1:Hadamard)</string>
    <string name="section_exposure">Exposure(0-6): 0.635ms</string>
    <string name="scan_width_add">Width(2-52): 7.02nm</string>
    <string name="reference">替换出厂参比</string>
    <string name="license">License</string>
    <string name="lock_btn">锁定机身按钮</string>
    <string name="switch_twoSided">启动两面测试</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="activation">激活</string>
    <string name="add_fabricComponents">添加成分</string>
    <string name="query_fabricComponents">查询</string>
    <string name="scan_barcode">扫描</string>
    <string-array name="scan_method_array">
        <item>Column</item>
        <item>Hadamard</item>
    </string-array>
    <string-array name="exposure_time">
        <item>0.635</item>
        <item>1.27</item>
        <item>2.54</item>
        <item>5.08</item>
        <item>15.24</item>
        <item>30.48</item>
        <item>60.96</item>
    </string-array>
</resources>