<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.Innospectra.NanoScan.ScanViewActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/calProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="#BBE3FF"
            android:visibility="gone" />

        <TextView
            android:id="@+id/progressBarinsideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calProgress"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/result_background"
        android:translationY="30dp"
        app:layout_constraintBottom_toTopOf="@id/cl_resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_resultView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:background="@drawable/empty_result"
        app:layout_constraintBottom_toTopOf="@id/btn_scanAndPredict"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="128dp"
            android:indeterminate="true"
            android:indeterminateTint="#0697FE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="32dp" />

        <ListView
            android:id="@+id/resultListView"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <com.Innospectra.NanoScan.SlideUpLayout
        android:id="@+id/SlideUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_scanAndPredict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/SlideUpLayoutBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/slider_background">

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/SlideUpLayoutContent"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:background="#FFFFFF">

            <ScrollView
                android:id="@+id/layout_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="308dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ll_fileNumberLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/file_number"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/fileNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:ems="4"
                            android:inputType="number"
                            android:singleLine="true" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_fileNumberLayout"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_fileNumberLayout"
                        android:focusableInTouchMode="true">

                        <TextView
                            android:id="@+id/tv_prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/user_name"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="6"
                            android:hint="ISC"
                            android:singleLine="true" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_user"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_user"
                        android:gravity="center"
                        android:minHeight="@dimen/dip40">

                        <TextView
                            android:id="@+id/tv_conf"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_conf"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tv_scan_conf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col_1"
                            android:textAppearance="?android:textAppearanceMedium" />

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_conf"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_doubleSideScan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_conf">

                        <TextView
                            android:id="@+id/tv_normal_continuous"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/double_side_scan"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <ToggleButton
                            android:id="@+id/btn_doubleside"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dip40"
                            android:textOff="关闭"
                            android:textOn="启用" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_doubleSideScan"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_double_side"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_doubleSideScan">

                        <TextView
                            android:id="@+id/tv_double_side"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/verification_data"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <ToggleButton
                            android:id="@+id/btn_verification"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dip40"
                            android:textOff="关闭"
                            android:textOn="启用" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_double_side"
                        android:background="@color/gray" />
                </RelativeLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>

    </com.Innospectra.NanoScan.SlideUpLayout>


    <Button
        android:id="@+id/btn_scanAndPredict"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/scan_button"
        android:text="@string/scan_predict"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
